# micro-kiki

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  COOKBOOK.md  MIGRATION.md  MODEL_CARD.md  README.md  SECURITY.md  pyproject.toml
.ralph/: CLAUDE.md  guardrails.md  loop.py  prd.json  progress.txt
.ralph-v0.3/: prd.json  progress.txt
.remember/: remember.md
configs/: brainstacks-v4.yaml  meta_intents.yaml  mlx-lora-micro-kiki.yaml  stack-33-components.yaml  stack-34-llm-ops.yaml  stack-35-ml-training.yaml
deploy/: CLAUDE.md
docker/: vllm.Dockerfile
docs/: AGENTS.md  SESSION-2026-04-19-INDEX.md  c3-source-inventory.md  paper-outline-triple-hybrid.md
examples/: chat_fr.py  code_python.py  memory_aeon.py
hardware/: CLAUDE.md
launchd/: com.electron.full-pipeline.plist  com.electron.full-pipeline.plist.template
paper/: Makefile  micro-kiki.tex
results/: anti_bias_eval.json  c1-classical-vs-vqc.json  c2-diagnostic.json  c2-downstream.json  c3-c1-rerun.json  gate-v3-python-rank32-rejected.json  gate-v3-python.json  gate-v3-reasoning.json  gate-v3-typescript.json  mbpp-python-v2-comparison.json  spikingkiki-27b-eval-summary.json  spikingkiki-27b-eval.json  spikingkiki-35b-analysis.json
scripts/: AGENTS.md  ablate_text_jepa_dim.py  aeon_compress_daemon.py  bench_classical_vs_vqc.py  bench_downstream_c2.py  benchmark_base_vs_lora.py  build_corpus_real.py  c2_diagnostic.py  convert_spikingkiki_35b.py  debug_patch.py  distill_chat_fr.py  distill_fast.py  distill_python.py  eval_aeon.py  (+46 more)
(+210 files in other folders)
